# slambook2-study

./: .gitignore  CMakeLists.txt  README.md
Ch10/: CMakeLists.txt  README.md
Ch11/: CMakeLists.txt  README.md  gen_vocab_large.cpp  loop_closure.cpp
Ch12/: CMakeLists.txt  README.md
Ch12/dense_mono/: dense_mapping.cpp
Ch12/dense_rgbd/: octomap_mapping.cpp  pointcloud_mapping.cpp
Ch13/: CMakeLists.txt  README.md
Ch13/config/: default.yaml
Ch13/entry/: entry.cpp
Ch13/include/myslam/: algorithm.h  backend.h  camera.h  config.h  dataset.h  feature.h  frame.h  frontend.h  map.h  mappoint.h  viewer.h  visual_odometry.h
Ch13/src/: backend.cpp  camera.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
Ch2/: CMakeLists.txt  README.md
Ch2/hello_lib/: CMakeLists.txt  install.sh
Ch2/project/: CMakeLists.txt  run.sh
Ch3/: CMakeLists.txt  README.md  coordinateTransform.cpp  eigenDataType.cpp  eigenGeometry.cpp  eigenSolveMatrix.cpp  plotTrajectory.cpp  visualizeGeometry.cpp
Ch4/: CMakeLists.txt  trajectoryError.cpp  useSophus.cpp
Ch5/: CMakeLists.txt  READNE.md
Ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  image_copy.cpp  undistortFullImage.cpp  undistortImage.cpp
Ch5/rgbd/: CMakeLists.txt  joinMap.cpp
Ch5/stereo/: CMakeLists.txt  stereoVision.cpp
Ch6/: CMakeLists.txt  GnCurveFitting.cpp  README.md  ceresCurveFittingAnalyticDiff.cpp  g2oCurveFitting.cpp
Ch6/ceres/: ceresCurveFittingAnalyticDiff.cpp  ceresCurveFittingAutoDiff.cpp  ceresCurveFittingNumericDiff.cpp
Ch6/g2o/: g2oCurveFitting.cpp  types.h
Ch6/manual/: GnCurveFitting.cpp
Ch7/: CMakeLists.txt  README.md  feature_detector.cpp  g2o_ba_example.cpp  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation_cv.cpp
Ch7/hw_06/: hw_06.cpp  hw_06.h
Ch7/hw_07/: hw_07.cpp  hw_07.h
Ch8/: CMakeLists.txt  README.md  direct_method.cpp  optical_flow.cpp
Ch8/hw_04/: common.h  direct_semidense.cpp  direct_semidense_g2o.cpp  direct_semidense_g2o.h  direct_sparse.cpp  direct_sparse_g2o.cpp  direct_sparse_g2o.h  types.h
Ch9/: CMakeLists.txt  README.md  bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp
cmake_modules/: FindCholmod.cmake  Findhello.cmake
